k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
